[gd_scene load_steps=23 format=3 uid="uid://dn0wbiwrdsssm"]

[ext_resource type="Script" path="res://Scripts/player/player.gd" id="1_o7u84"]
[ext_resource type="Shader" path="res://Scenes/player/player.gdshader" id="2_hte7w"]
[ext_resource type="AudioStream" uid="uid://r2pcqwf3375g" path="res://Assets/Sound FX/Concrete 1.wav" id="3_pd2ck"]
[ext_resource type="Texture2D" uid="uid://deuc5qwgfjv4o" path="res://Assets/Sprites/tile000.png" id="3_w7ojm"]
[ext_resource type="Texture2D" uid="uid://v20nd5nrh7yh" path="res://Assets/Sprites/tile001.png" id="4_mwtaq"]
[ext_resource type="AudioStream" uid="uid://i1rwj3peoarc" path="res://Assets/Sound FX/29_Jump_02.wav" id="4_tfwt1"]
[ext_resource type="Texture2D" uid="uid://bha54myokryxo" path="res://Assets/Sprites/tile002.png" id="5_5lr6w"]
[ext_resource type="AudioStream" uid="uid://d1oqk31vmk7f0" path="res://Assets/Sound FX/46_Landing_02.wav" id="5_7vxdt"]
[ext_resource type="AudioStream" uid="uid://dnw4fniowclo5" path="res://Assets/Sound FX/19_Slide_01.wav" id="6_5ffb7"]
[ext_resource type="Texture2D" uid="uid://cbyn5foae73da" path="res://Assets/Sprites/tile003.png" id="6_xv1lk"]
[ext_resource type="Texture2D" uid="uid://deh4k7y7wc7s2" path="res://Assets/Sprites/tile004.png" id="7_o4tyk"]
[ext_resource type="Texture2D" uid="uid://vppegl1ogc64" path="res://Assets/Sprites/tile005.png" id="8_67aqk"]
[ext_resource type="Texture2D" uid="uid://dvf38qwjx6d3k" path="res://Assets/Sprites/tile006.png" id="9_g61pt"]
[ext_resource type="Texture2D" uid="uid://cvv7o4hl5t238" path="res://Assets/Sprites/tile007.png" id="10_rdi86"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iqxw0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_idsdc"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j8qju"]
noise_type = 0
frequency = 0.05

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_y0rvd"]
noise = SubResource("FastNoiseLite_j8qju")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mnpn0"]
shader = ExtResource("2_hte7w")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_count = 2.0
shader_parameter/line_density = 0.45
shader_parameter/line_faloff = 0.688
shader_parameter/mask_size = 0.303
shader_parameter/mask_edge = 0.5
shader_parameter/animation_speed = 0.5
shader_parameter/noise = SubResource("NoiseTexture2D_y0rvd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tp1us"]
bg_color = Color(0.222656, 0, 0.0128703, 0.407843)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uuntn"]
bg_color = Color(0.784314, 0.0823529, 0.0823529, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="SpriteFrames" id="SpriteFrames_ycj05"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_w7ojm")
}, {
"duration": 1.0,
"texture": ExtResource("4_mwtaq")
}, {
"duration": 1.0,
"texture": ExtResource("5_5lr6w")
}, {
"duration": 1.0,
"texture": ExtResource("6_xv1lk")
}, {
"duration": 1.0,
"texture": ExtResource("7_o4tyk")
}, {
"duration": 1.0,
"texture": ExtResource("8_67aqk")
}, {
"duration": 1.0,
"texture": ExtResource("9_g61pt")
}, {
"duration": 1.0,
"texture": ExtResource("10_rdi86")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CharacterBody3D" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_o7u84")
MAX_MOMENTUM = null
FLIP_MOMENTUM_BONUS = null
MOMENTUM_DRAIN_RATE = null
MOMENTUM_GAIN_RATE = null
WALK_STEP_DELAY = null
SPRINT_STEP_DELAY = null
WALK_SPEED = null
SPRINT_SPEED = null
JUMP_VELOCITY = null
MOUSE_SENSITIVITY = null
SPEED_LINES_THRESHOLD = null
MAX_SPEED_LINES = null
MAX_STAMINA = null
STAMINA_DRAIN_RATE = null
STAMINA_REGEN_RATE = null
BASE_FOV = null
SPRINT_FOV_INCREASE = null
SLIDE_FOV_INCREASE = null
FOV_CHANGE_SPEED = null
MOVEMENT_TILT_AMOUNT = null
MOVEMENT_TILT_SPEED = null
BOB_FREQUENCY = null
BOB_AMPLITUDE = null
SPRINT_BOB_FREQUENCY = null
SPRINT_BOB_AMPLITUDE = null
SLIDE_JUMP_BOOST = null
SLIDE_COYOTE_TIME = null
SLIDE_JUMP_CONTROL = null
SLIDE_JUMP_MOMENTUM = null
SLIDE_TILT_AMOUNT = null
SLIDE_COOLDOWN = null
SLIDE_SPEED_BOOST = null
SLIDE_DURATION = null
SLIDE_SMOOTH_SPEED = null
SLIDE_HEIGHT_CHANGE = null
SLIDE_CAMERA_TILT = null
normal_gravity = null

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_iqxw0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_idsdc")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.646561, -0.154348)

[node name="ColorRect" type="ColorRect" parent="Camera3D"]
material = SubResource("ShaderMaterial_mnpn0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MomentumBar" type="ProgressBar" parent="Camera3D/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -129.0
offset_top = 23.0
offset_right = 129.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tp1us")
theme_override_styles/fill = SubResource("StyleBoxFlat_uuntn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Camera3D/UI/MomentumBar"]
position = Vector2(6, 14)
scale = Vector2(0.76, 0.76)
sprite_frames = SubResource("SpriteFrames_ycj05")
autoplay = "default"
frame = 7
frame_progress = 1.0

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.475535, 0)

[node name="Audio" type="Node" parent="."]

[node name="FootStepsPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_pd2ck")
volume_db = -2.825

[node name="JumpPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_tfwt1")
volume_db = 2.205

[node name="LandingPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_7vxdt")

[node name="SlidePlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_5ffb7")
